Fix icons not showing in certain browsers

--- a/styles/Resume.module.css
+++ b/styles/Resume.module.css
@@ -1,6 +1,3 @@
-@import url('fontawesome/css/fontawesome.min.css');
-@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,200');
-
 .page {
     margin-top: 2%;
     margin-bottom: 2%;
@@ -8,11 +5,11 @@
 
     width: 210mm;
     height: 297mm;
-  
+
     padding: 32px;
     box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.4);
 }
-  
+
 @page {
     size: A4;
     margin: 0;
@@ -66,13 +63,10 @@
 }
 
 .contact .icon-font {
-    font-family: 'Material Symbols Outlined';
     font-size: 14px;
-    vertical-align: text-top;
-}
-
-.contact .icon-font-brand {
-    font-family: 'Font Awesome 6 Brands';
+    float: left;
+    margin-top: 2px;
+    margin-right: 3px;
 }
 
 .subtitle {
@@ -94,9 +88,10 @@
 }
 
 .icon-font {
-    font-family: 'Material Symbols Outlined';
     font-size: 13px;
-    vertical-align: text-top;
+    float: left;
+    margin-top: 2px;
+    margin-right: 3px;
 }
 
 .date {
@@ -177,12 +172,9 @@
     float: right;
 }
 
-.projects-icons {
-    font-size: 16px;
-}
-
 .projects .icon-font {
-    font-size: 13px;
+    margin-top: 3px;
+    font-size: 14px;
 }
 
 .projects .date {
